--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "@types/node": "^16.18.91",
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
+    "antd": "^5.16.0",
+    "axios": "^1.6.7",
     "firebase": "^10.10.0",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^3.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "sass-loader": "^10.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
