--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.23",
     "antd": "^5.16.0",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "firebase": "^10.10.0",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
