--- a/functions/package.json
+++ b/functions/package.json
@@ -10,13 +10,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "lib/index.js",
   "dependencies": {
     "express": "^4.19.2",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "octokit": "^3.2.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
