--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "express": "^4.19.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "octokit": "^3.2.0"
+    "octokit": "^3.2.0",
+    "@google/generative-ai": "^0.2.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
