--- a/functions/package.json
+++ b/functions/package.json
@@ -14,11 +14,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
+    "@anthropic-ai/sdk": "^0.17.1",
     "express": "^4.19.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "octokit": "^3.2.0",
-    "@google/generative-ai": "^0.2.1"
+    "openai": "^4.28.4"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
