--- a/functions/package.json
+++ b/functions/package.json
@@ -10,13 +10,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google/generative-ai": "^0.2.1",
+    "@anthropic-ai/sdk": "^0.17.1",
+    "axios": "^1.6.7",
     "express": "^4.19.2",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "octokit": "^3.2.0",
+    "openai": "^4.28.4"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
