--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "@anthropic-ai/sdk": "^0.17.1",
     "@google/generative-ai": "^0.2.1",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
