--- a/functions/package.json
+++ b/functions/package.json
@@ -22,8 +22,7 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "octokit": "^3.2.0",
-    "openai": "^4.28.4",
-    "stripe": "^15.4.0"
+    "openai": "^4.28.4"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
