--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.16.0",
     "axios": "^1.6.7",
     "firebase": "^10.10.0",
+    "markdown-to-jsx": "^7.4.7",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
