--- a/functions/package.json
+++ b/functions/package.json
@@ -24,7 +24,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "octokit": "^3.2.0",
-    "openai": "^4.28.4"
+    "openai": "^4.28.4",
+    "razorpay": "^2.9.4"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
