--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "antd": "^5.16.0",
     "axios": "^1.6.7",
     "firebase": "^10.10.0",
+    "markdown-to-jsx": "^7.4.7",
     "node-sass": "^8.0.0",
+    "razorpay": "^2.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.9",
